add plugins: all version minecraft

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Jul 01 12:32:03 UTC 2025
+#Wed Jul 02 04:09:21 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -30,10 +30,10 @@ level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=50
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=&4&lSurvival Server with my friend
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
