feat: Skin restorer, SimpleScore, Placeholder API

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Jul 02 04:09:21 UTC 2025
+#Wed Jul 02 05:46:07 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -33,7 +33,7 @@ max-chained-neighbor-updates=1000000
 max-players=50
 max-tick-time=60000
 max-world-size=29999984
-motd=&4&lSurvival Server with my friend
+motd="TeraRush | Survival | Play with Friends\!"
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
